#1491 Fix jumping in the site dropdown

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -508,6 +508,7 @@ h5 {
 
   .ui-select-multiple.ui-select-bootstrap input.ui-select-search {
     margin-left: 8px !important;
+    width: 95% !important;
   }
 
   .ui-select-multiple.ui-select-bootstrap::after {
